Fix: Fix horizontal scroll on particles

--- a/src/components/LandingPage/WelcomeComponent.module.css
+++ b/src/components/LandingPage/WelcomeComponent.module.css
@@ -169,7 +169,7 @@
 
 .particleContainer {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   /* Confine particles to the height of the screen */
   overflow: hidden;
